Configurando uma URL base para o Rest Client

--- a/servicea/src/main/resources/application.properties
+++ b/servicea/src/main/resources/application.properties
@@ -4,6 +4,12 @@ quarkus.http.port=3333
 # default port is 8081
 quarkus.http.test-port=5555
 
+#dev
+%dev.dev.rpmhub.ServiceB/mp-rest/url=http://localhost:4444/serviceb
+
+#test
+%test.dev.rpmhub.ServiceB/mp-rest/url=http://localhost:8080/serviceb
+
 # TODO
 # Adicionar duas URLs bases para o Rest Client do Service B a primeira com o
 # prefixo %dev (devenvolvimento) e a segunda com o prefixo %test. A diferença
